<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="3">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:background="@android:color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/dislike"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:contentDescription="@string/like_dislike_image"
                    android:layout_marginEnd="@dimen/unit_32"
                    android:elevation="@dimen/unit_2"
                    android:src="@drawable/ic_dislike" />

                <ImageView
                    android:id="@+id/like"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:contentDescription="@string/like_dislike_image"
                    android:layout_marginStart="@dimen/unit_32"
                    android:elevation="@dimen/unit_2"
                    android:src="@drawable/ic_like" />
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/unit_8"
                android:text="@string/number_of_reviewed_items"
                android:gravity="center_horizontal"
                android:textColor="@android:color/black" />
            <TextView
                android:id="@+id/counterTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/unit_4"
                android:gravity="center_horizontal"
                android:textColor="@android:color/black" />

            <Button
                android:id="@+id/reviewButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="@dimen/unit_16"
                android:background="@color/colorPrimary"
                android:gravity="center"
                android:text="@string/review"
                android:textColor="@color/colorAccent"
                android:visibility="gone" />
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminateTintMode="src_atop"
            android:indeterminateTint="@color/colorPrimary"
            android:layout_centerInParent="true" />
    </RelativeLayout>
</RelativeLayout>